; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_bio.c_fs_buffer_cache_gc_unregister.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_bio.c_fs_buffer_cache_gc_unregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { void (i32, i8*)*, i8* }

@buf_gc_callout = common dso_local global i32 0, align 4
@FS_BUFFER_CACHE_GC_CALLOUTS_MAX_SIZE = common dso_local global i32 0, align 4
@fs_callouts = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fs_buffer_cache_gc_unregister(void (i32, i8*)* %0, i8* %1) #0 {
  %3 = alloca void (i32, i8*)*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store void (i32, i8*)* %0, void (i32, i8*)** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32, i32* @buf_gc_callout, align 4
  %7 = call i32 @lck_mtx_lock(i32 %6)
  store i32 0, i32* %5, align 4
  br label %8

8:                                                ; preds = %42, %2
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @FS_BUFFER_CACHE_GC_CALLOUTS_MAX_SIZE, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %45

12:                                               ; preds = %8
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @fs_callouts, align 8
  %14 = load i32, i32* %5, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i64 %15
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load void (i32, i8*)*, void (i32, i8*)** %17, align 8
  %19 = load void (i32, i8*)*, void (i32, i8*)** %3, align 8
  %20 = icmp eq void (i32, i8*)* %18, %19
  br i1 %20, label %21, label %41

21:                                               ; preds = %12
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** @fs_callouts, align 8
  %23 = load i32, i32* %5, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i64 %24
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 1
  %27 = load i8*, i8** %26, align 8
  %28 = load i8*, i8** %4, align 8
  %29 = icmp eq i8* %27, %28
  br i1 %29, label %30, label %41

30:                                               ; preds = %21
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** @fs_callouts, align 8
  %32 = load i32, i32* %5, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i64 %33
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  store void (i32, i8*)* null, void (i32, i8*)** %35, align 8
  %36 = load %struct.TYPE_2__*, %struct.TYPE_2__** @fs_callouts, align 8
  %37 = load i32, i32* %5, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i64 %38
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 1
  store i8* null, i8** %40, align 8
  br label %41

41:                                               ; preds = %30, %21, %12
  br label %42

42:                                               ; preds = %41
  %43 = load i32, i32* %5, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %5, align 4
  br label %8

45:                                               ; preds = %8
  %46 = load i32, i32* @buf_gc_callout, align 4
  %47 = call i32 @lck_mtx_unlock(i32 %46)
  ret i32 0
}

declare dso_local i32 @lck_mtx_lock(i32) #1

declare dso_local i32 @lck_mtx_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
